--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 
     <link rel="stylesheet" href="css/style.css" />
 
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/main.css" />
+
     <!-- Modernizr JS -->
     <script src="js/modernizr-2.6.2.min.js"></script>
     <!-- FOR IE9 below -->
@@ -97,19 +100,14 @@
                 <ul class="sf-menu" id="fh5co-primary-menu">
                   <li class="active"><a href="index.html">Home</a></li>
                   <li>
-                    <a href="vacation.html" class="fh5co-sub-ddown"
-                      >Vacations</a
-                    >
+                    <a href="vacation.html" class="fh5co-sub-ddown">Packages</a>
                     <ul class="fh5co-sub-menu">
-                      <li><a href="#">Family</a></li>
-                      <li><a href="#">CSS3 &amp; HTML5</a></li>
-                      <li><a href="#">Angular JS</a></li>
-                      <li><a href="#">Node JS</a></li>
-                      <li><a href="#">Django &amp; Python</a></li>
+                      <li><a href="#">International</a></li>
+                      <li><a href="#">Domestic</a></li>
                     </ul>
                   </li>
-                  <li><a href="flight.html">Flights</a></li>
-                  <li><a href="hotel.html">Hotel</a></li>
+                  <li><a href="flight.html">Exhibiton</a></li>
+                  <li><a href="hotel.html">Cruise</a></li>
                   <li><a href="car.html">Car</a></li>
                   <li><a href="blog.html">Blog</a></li>
                   <li><a href="contact.html">Contact</a></li>
@@ -437,7 +435,7 @@
                   </div>
                   <div class="desc2 animate-box">
                     <div class="col-sm-7 col-sm-push-1 col-md-7 col-md-push-1">
-                      <p>
+                      <!-- <p>
                         HandCrafted by
                         <a
                           href="http://frehtml5.co/"
@@ -445,10 +443,10 @@
                           class="fh5co-site-name"
                           >FreeHTML5.co</a
                         >
-                      </p>
-                      <h2>Exclusive Limited Time Offer</h2>
-                      <h3>Fly to Hong Kong via Los Angeles, USA</h3>
-                      <span class="price">$599</span>
+                      </p> -->
+                      <h2>Nimble Tours Pvt. Ltd.</h2>
+                      <h3>Travel the World with Us</h3>
+                      <!-- <span class="price">$599</span> -->
                       <!-- <p><a class="btn btn-primary btn-lg" href="#">Get Started</a></p> -->
                     </div>
                   </div>
@@ -502,14 +500,14 @@
               >
                 <div href="#">
                   <img
-                    src="images/place-1.jpg"
+                    src="images/dubai.webp"
                     alt="Free HTML5 Website Template by FreeHTML5.co"
                     class="img-responsive"
                   />
                   <div class="desc">
                     <span></span>
                     <h3>Dazzling Dubai</h3>
-                    <span>3 nights + Flight 5*Hotel</span>
+                    <span>Per person starting from</span>
                     <span class="price">INR 40,990/-*</span>
                     <a class="btn btn-primary btn-outline" href="#"
                       >Book Now <i class="icon-arrow-right22"></i
@@ -523,14 +521,14 @@
               >
                 <div href="#">
                   <img
-                    src="images/place-2.jpg"
+                    src="images/singapore.webp"
                     alt="Free HTML5 Website Template by FreeHTML5.co"
                     class="img-responsive"
                   />
                   <div class="desc">
                     <span></span>
                     <h3>Scenic Singapore</h3>
-                    <span>4 nights + Flight 5*Hotel</span>
+                    <span>Per person starting from</span>
                     <span class="price">INR 54,990/-*</span>
                     <a class="btn btn-primary btn-outline" href="#"
                       >Book Now <i class="icon-arrow-right22"></i
@@ -544,15 +542,15 @@
               >
                 <div href="#">
                   <img
-                    src="images/place-3.jpg"
+                    src="images/europe.webp"
                     alt="Free HTML5 Website Template by FreeHTML5.co"
                     class="img-responsive"
                   />
                   <div class="desc">
                     <span></span>
-                    <h3>Marvelous Maldives</h3>
-                    <span>2 nights + Flight 4*Hotel</span>
-                    <span class="price"> INR 55,990/-*</span>
+                    <h3>Extravaganza Europe</h3>
+                    <span>Per person starting from</span>
+                    <span class="price"> INR 91,990/-*</span>
                     <a class="btn btn-primary btn-outline" href="#"
                       >Book Now <i class="icon-arrow-right22"></i
                     ></a>
@@ -570,7 +568,7 @@
           </div>
         </div>
 
-        <div id="fh5co-features">
+        <!-- <div id="fh5co-features">
           <div class="container">
             <div class="row">
               <div class="col-md-4 animate-box">
@@ -669,7 +667,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div id="fh5co-destination">
           <div class="tour-fluid">
@@ -678,52 +676,52 @@
                 <ul id="fh5co-destination-list" class="animate-box">
                   <li
                     class="one-forth text-center"
-                    style="background-image: url(images/place-1.jpg)"
+                    style="background-image: url(images/uae.webp)"
                   >
                     <a href="#">
                       <div class="case-studies-summary">
-                        <h2>Los Angeles</h2>
+                        <h2>UAE</h2>
                       </div>
                     </a>
                   </li>
                   <li
                     class="one-forth text-center"
-                    style="background-image: url(images/place-2.jpg)"
+                    style="background-image: url(images/maldives.webp)"
                   >
                     <a href="#">
                       <div class="case-studies-summary">
-                        <h2>Hongkong</h2>
+                        <h2>Maldives</h2>
                       </div>
                     </a>
                   </li>
                   <li
                     class="one-forth text-center"
-                    style="background-image: url(images/place-3.jpg)"
+                    style="background-image: url(images/russia.webp)"
                   >
                     <a href="#">
                       <div class="case-studies-summary">
-                        <h2>Italy</h2>
+                        <h2>Russia</h2>
                       </div>
                     </a>
                   </li>
                   <li
                     class="one-forth text-center"
-                    style="background-image: url(images/place-4.jpg)"
+                    style="background-image: url(images/turkey.webp)"
                   >
                     <a href="#">
                       <div class="case-studies-summary">
-                        <h2>Philippines</h2>
+                        <h2>Turkey</h2>
                       </div>
                     </a>
                   </li>
 
                   <li
                     class="one-forth text-center"
-                    style="background-image: url(images/place-5.jpg)"
+                    style="background-image: url(images/europe_alt.webp)"
                   >
                     <a href="#">
                       <div class="case-studies-summary">
-                        <h2>Japan</h2>
+                        <h2>Europe</h2>
                       </div>
                     </a>
                   </li>
@@ -737,51 +735,51 @@
                   </li>
                   <li
                     class="one-forth text-center"
-                    style="background-image: url(images/place-6.jpg)"
+                    style="background-image: url(images/andman.webp)"
                   >
                     <a href="#">
                       <div class="case-studies-summary">
-                        <h2>Paris</h2>
+                        <h2>Andman & Nicobar</h2>
                       </div>
                     </a>
                   </li>
                   <li
                     class="one-forth text-center"
-                    style="background-image: url(images/place-7.jpg)"
+                    style="background-image: url(images/goa.webp)"
                   >
                     <a href="#">
                       <div class="case-studies-summary">
-                        <h2>Singapore</h2>
+                        <h2>Goa</h2>
                       </div>
                     </a>
                   </li>
                   <li
                     class="one-forth text-center"
-                    style="background-image: url(images/place-8.jpg)"
+                    style="background-image: url(images/kashmir.webp)"
                   >
                     <a href="#">
                       <div class="case-studies-summary">
-                        <h2>Madagascar</h2>
+                        <h2>Kashmir</h2>
                       </div>
                     </a>
                   </li>
                   <li
                     class="one-forth text-center"
-                    style="background-image: url(images/place-9.jpg)"
+                    style="background-image: url(images/laddakh.webp)"
                   >
                     <a href="#">
                       <div class="case-studies-summary">
-                        <h2>Egypt</h2>
+                        <h2>Leh Laddakh</h2>
                       </div>
                     </a>
                   </li>
                   <li
                     class="one-forth text-center"
-                    style="background-image: url(images/place-10.jpg)"
+                    style="background-image: url(images/uttrakhand.webp)"
                   >
                     <a href="#">
                       <div class="case-studies-summary">
-                        <h2>Indonesia</h2>
+                        <h2>Uttrakhand</h2>
                       </div>
                     </a>
                   </li>
@@ -932,11 +930,11 @@
                     </p>
                   </blockquote>
                   <p class="author">
-                    Mr. Dipak Agarwal
+                    Polstar India
                     <!-- <a href="http://freehtml5.co/" target="_blank"
                       >Polstar India</a
                     > -->
-                    <span class="subtext">Polstar India</span>
+                    <span class="subtext">Mr. Dipak Agarwal</span>
                   </p>
                 </div>
               </div>
@@ -954,11 +952,11 @@
                     </p>
                   </blockquote>
                   <p class="author">
-                    Mr. Vikash & Anurag Agarwal
+                    Azvik Glasses Pvt. Ltd.
                     <!-- <a href="http://freehtml5.co/" target="_blank"
                       >FREEHTML5.co</a
                     > -->
-                    <span class="subtext">Azvik Glasses Pvt. Ltd.</span>
+                    <span class="subtext">Mr. Vikash & Anurag Agarwal</span>
                   </p>
                 </div>
               </div>
@@ -978,11 +976,9 @@
                     </p>
                   </blockquote>
                   <p class="author">
-                    Mr. Utsav Gupta
+                    Duratuf Glass Industries Pvt. Ltd.
                     <!-- <a href="#">FREEHTML5.co</a> -->
-                    <span class="subtext"
-                      >Duratuf Glass Industries Pvt. Ltd.</span
-                    >
+                    <span class="subtext">Mr. Utsav Gupta</span>
                   </p>
                 </div>
               </div>
